<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">diexpenses</string>

    <!-- Common App Strings -->
    <string name="diexpenses">diexpenses</string>

    <!-- Strings related to login -->
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="go">Go</string>
    <string name="register_question"><u>Don\'t have an Account? Signup Now</u></string>

    <string name="common_create">Create</string>
    <string name="common_update">Update</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_edit">Edit</string>
    <string name="common_accept">Accept</string>
    <string name="common_field_required">Field required</string>
    <string name="common_numeric_field_required_with_lenght">This field must contain %1$s digits</string>
    <string name="common_unknown_error">An unknown error has occurred</string>
    <string name="common_invalid_amount">Enter a valid amount.</string>

    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="have_account_question"><u>Have an Account? Login Now</u></string>
    <string name="confirm_password">Confirm password</string>
    <string name="different_passwords">Passwords do not match.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_nav_home">Home</string>
    <string name="drawer_nav_movements">Movements</string>
    <string name="drawer_nav_types">Types</string>
    <string name="drawer_nav_bank_accounts">Bank Accounts</string>
    <string name="drawer_nav_statistics">Statistics</string>
    <string name="drawer_nav_contact">Contact</string>
    <string name="drawer_nav_about_diexpenses">About diexpenses</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="menu_option_settings">Settings</string>
    <string name="menu_option_logout">Logout</string>
    <string name="send_mail">Send mail…</string>
    <string name="home_greeting">Hello %1$s!</string>
    <string name="home_month_incomes">Month incomes: %1$s%2$s</string>
    <string name="home_total_amount">Total amount: %1$s%2$s</string>
    <string name="home_month_expenses">Month expenses: %1$s%2$s</string>
    <string name="home_expenses">Expenses</string>
    <string name="home_incomes">Incomes</string>
    <string name="home_balance_low">Do not spend much!</string>
    <string name="home_balance_medium">Spares nothing…</string>
    <string name="home_balance_high">This month you are doing well</string>
    <string name="home_no_data">You have not yet recorded any movement this month.</string>
    <string name="kinds_new">Add new expense kind</string>
    <string name="kinds_new_title">New kind of expense</string>
    <string name="kinds_new_message">Enter the name of the kind of expense</string>
    <string name="kinds_edit_title">Edit expense kind</string>
    <string name="kinds_edit_message">Enter the new name expense kind</string>
    <string name="kinds_remove_title">Remove expense kind</string>
    <string name="kinds_remove_message">Are you sure you want to delete the expense kind \"%1$s\"</string>
    <string name="kinds_menu_title">Expense kind \"%1$s\"</string>
    <string name="subkinds_new">Add new expense subkind</string>
    <string name="subkinds_menu_title">Expense subkind \"%1$s\"</string>
    <string name="subkinds_new_title">New subkind of expense</string>
    <string name="subkinds_new_message">Enter the name of the subkind of expense</string>
    <string name="subkinds_edit_title">Edit subkind expense</string>
    <string name="subkinds_edit_message">Enter the new name of the subkind expense</string>
    <string name="subkinds_remove_title">Remove expense subkind</string>
    <string name="subkinds_remove_message">Are you sure you want to delete the expense subkind \"%1$s\"</string>
    <string name="bank_account_unknow_error_creating">Unknown error creating bank account.</string>
    <string name="bank_account_error">Error creating bank account.</string>
    <string name="bank_account_unknow_error_updating">Unknown error updating bank account.</string>
    <string name="bank_account_error_updating">Error updating bank account.</string>
    <string name="bank_accounts_new">Add new bank account</string>
    <string name="bank_accounts_menu_title">Bank account \"%1$s\"</string>
    <string name="bank_accounts_remove_title">Remove bank account</string>
    <string name="bank_accounts_remove_message">Are you sure you want to delete the bank account \"%1$s\"</string>
    <string name="bank_accounts_unknow_error_deleting">Unknown error deleting bank account.</string>
    <string name="bank_accounts_error_deleting">Error deleting bank account.</string>
    <string name="movement_unknow_error_creating">Unknown error creating movement.</string>
    <string name="movement_error_creating">Error creating movement.</string>
    <string name="movements_new">Add new movement</string>
    <string name="movements_menu_title">Movement \"%1$s\"</string>
    <string name="movements_remove_title">Remove movement</string>
    <string name="movements_remove_message">Are you sure you want to delete the movement \"%1$s\"</string>
    <string name="preferences_select_picture">Select Picture</string>
    <string name="email_subject">diexpenses contact</string>
    <string name="email_to">d.sepulvedabl@gmail.com</string>
    <string name="rate_button">Rate it</string>
    <string name="rate_title">Please rate</string>
    <string name="rate_message">Thanks for using diexpenses. Please take a moment to rate it.</string>
    <string name="protocol_market">market://details?id=%1$s</string>
    <string name="protocol_market_url">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="preferences_currency_title">Currency</string>
    <string name="preferences_currency_summary">Select your currency</string>
    <string name="preferences_currency_key">currency</string>
    <string name="preferences_currency_default_value">0</string>
    <string name="preferences_profile_image_key">profile_image</string>
    <string name="preferences_profile_image_title">Profile image</string>
    <string name="about_description">diexpenses es la forma más sencilla de gestionar tus gastos en la nube. Puedes ver los gastos en la app para iOS y en un futuro desde la web.</string>
    <string name="about_university">Universidad Pontificia de Salamanca</string>
    <string name="about_mimo">Master en Informática Móvil</string>
    <string name="about_diemaster">Diego Sepúlveda Blanco</string>
    <string name="bank_account_description">Description</string>
    <string name="bank_account_iban">IBAN</string>
    <string name="bank_account_entity">Entity</string>
    <string name="bank_account_office">Office</string>
    <string name="bank_account_control_digit">Control digit</string>
    <string name="bank_account_number">Account number</string>
    <string name="bank_account_balance">Balance</string>
    <string name="bank_account_save">Save</string>
    <string name="dialog_edit_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="generic_year">Year</string>
    <string name="generic_month">Month</string>
    <string name="movement_income">Income</string>
    <string name="movement_expense">Expense</string>
    <string name="movement_concept">Concept</string>
    <string name="movement_amount">Amount</string>
    <string name="movement_create">Create</string>
    <string name="movement_kind_label">Kind:</string>
    <string name="movement_subkind_label">Subkind:</string>
    <string name="movement_bank_account_label">Bank account:</string>
    <string name="movement_transaction_date_label">Transaction date:</string>
    <string name="movement_invalid_amount">You can not create movements with amount 0.</string>
    <string name="statistics_year_label">Year:</string>
    <string name="statistics_month_label">Month:</string>
    <string name="statistics_kind_label">Kind:</string>
    <string name="statistics_subkind_label">Subkind:</string>
    <string name="statistics_bank_account_label">Bank account:</string>
    <string name="statistics_action">See statistics</string>
    <string name="statistics_mask_label">Getting statistics...</string>
    <string name="statistics_select_kind">Select kind first</string>
    <string name="statistics_historical">Historical</string>
    <string name="statistics_every_month">Every month</string>
    <string name="statistics_all_kinds">All kinds</string>
    <string name="statistics_all_subkinds">All subkinds</string>
    <string name="statistics_all_bank_accounts">All bank accounts</string>
    <string name="statistics_no_data">No data have been recovered</string>
    <string name="signup_fail_creating_user">User already exist or the password is invalid.</string>
    <string name="signup_password_description">The password must contain at least one digit, one uppercase and lowercase alphabets and a length of at least 6 characters.</string>
    <string name="signup_general_error">An error has occurred. Try it again later.</string>
    <string name="preferences_permission_title">Permission request</string>
    <string name="preferences_external_storage_permission_message">We are going to request permission to access your images and thus can select your profile picture. Do you agree?</string>
    <string name="preferences_camera_permission_message">We are going to request permission to access your camera and thus can capture your profile picture. Do you agree?</string>
    <string name="preferences_external_storage_permission_alert">If you do not enable external storage permission you can not choose your profile image.</string>
    <string name="preferences_camera_permission_alert">If you do not enable camera permission you can not take your profile image.</string>
    <string name="preference_profile_image_origin">Choose the source profile photo</string>
    <string name="preferences_take_photo">Take a photo</string>
    <string name="preferences_photo_from_gallery">Select photo from gallery</string>

</resources>
