<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_margin="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.MainActivity">

            <ToggleButton
                android:id="@+id/movement_toggle_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/movement_expense"
                android:textOff="@string/movement_income"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/movement_concept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_toggle_expense">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movement_concept"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/movement_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_concept">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movement_amount"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/movement_kind_prl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_amount">

                <TextView
                    android:id="@+id/movement_kind_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    style="@style/text.center_vertical.padding_left"
                    android:text="@string/movement_kind_label"
                    app:layout_widthPercent="40%" />

                <Spinner
                    android:id="@+id/movement_kind"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    android:layout_toRightOf="@id/movement_kind_text_view"
                    android:layout_toEndOf="@id/movement_kind_text_view"
                    app:layout_widthPercent="60%" />

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/movement_subkind_prl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_kind_prl">

                <TextView
                    android:id="@+id/movement_subkind_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    style="@style/text.center_vertical.padding_left"
                    android:text="@string/movement_subkind_label"
                    app:layout_widthPercent="40%" />

                <Spinner
                    android:id="@+id/movement_subkind"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    android:layout_toRightOf="@id/movement_subkind_text_view"
                    android:layout_toEndOf="@id/movement_subkind_text_view"
                    app:layout_widthPercent="60%" />

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/movement_bank_account_prl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_subkind_prl">

                <TextView
                    android:id="@+id/movement_bank_account_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    style="@style/text.center_vertical.padding_left"
                    android:text="@string/movement_bank_account_label"
                    app:layout_widthPercent="40%" />

                <Spinner
                    android:id="@+id/movement_bank_account"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    android:layout_toRightOf="@id/movement_bank_account_text_view"
                    android:layout_toEndOf="@id/movement_bank_account_text_view"
                    app:layout_widthPercent="60%" />

            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/movement_transacion_date_prl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movement_bank_account_prl">

                <TextView
                    android:id="@+id/movement_transactiondate_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    style="@style/text.center_vertical.padding_left"
                    android:text="@string/movement_transaction_date_label"
                    app:layout_widthPercent="40%" />

                <TextView
                    android:id="@+id/movement_transaction_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/movement_spinner_row_height"
                    android:layout_toRightOf="@id/movement_transactiondate_text_view"
                    android:layout_toEndOf="@id/movement_transactiondate_text_view"
                    style="@style/text.center_vertical.custom_padding_left"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"
                    app:layout_widthPercent="60%" />

            </android.support.percent.PercentRelativeLayout>

            <Button
                android:id="@+id/movement_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/actionButton"
                android:layout_below="@id/movement_transacion_date_prl"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="@string/movement_create"/>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/movement_progress_bar"
        style="@style/progress_bar_center_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>